kustomize/overlays/beta/afk-no/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fint-core-consumer-utdanning-vurdering
spec:
  entryPoints:
    - web
  routes:
    - match: "Host(`beta.felleskomponent.no`) && (PathPrefix(`/utdanning/vurdering/elevfravar`) || PathPrefix(`/utdanning/vurdering/fravarsregistrering`)) && Headers(`x-org-id`, `afk.no`)"
      kind: Rule
      services:
        - name: fint-core-consumer-utdanning-vurdering
          port: 8080
